unpackaged/main/default/objects/zkfedex__NaftaCo__c/zkfedex__NaftaCo__c.object-meta.xml
<CustomObject>
    <label>FedEx NAFTA CO</label>
    <nameField>
        <displayFormat>FEDEX-NAFTA-CO-{00000000}</displayFormat>
        <label>NAFTA CO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx NAFTA COs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>