unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__BlanketPeriodBeginDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BlanketPeriodBeginDate__c</fullName>
    <label>Blanket Period Begin Date</label>
    <type>Date</type>
</CustomField>