unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__BlanketPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BlanketPeriodEndDate__c</fullName>
    <label>Blanket Period End Date</label>
    <type>Date</type>
</CustomField>