unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__ProducerAddressCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProducerAddressCity__c</fullName>
    <label>Producer Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>