unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__ProducerAddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProducerAddressCountryCode__c</fullName>
    <label>Producer Address Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>