unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__ProducerAddressStateProvince__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProducerAddressStateProvince__c</fullName>
    <label>Producer Address State/Province</label>
    <length>5</length>
    <type>Text</type>
</CustomField>