unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__ProducerAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProducerAddressStreet__c</fullName>
    <label>Producer Address Street</label>
    <type>TextArea</type>
</CustomField>