unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__ProducerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProducerCompanyName__c</fullName>
    <label>Producer Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>