unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__SignatureContactName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SignatureContactName__c</fullName>
    <label>Signature Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>