unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__SignatureContactPhone__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SignatureContactPhone__c</fullName>
    <label>Signature Contact Phone</label>
    <type>Phone</type>
</CustomField>