unpackaged/main/default/objects/zkfedex__NaftaCo__c/fields/zkfedex__SignatureContactTitle__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SignatureContactTitle__c</fullName>
    <label>Signature Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>